in-file name identification

--- a/Loginstyles.css
+++ b/Loginstyles.css
@@ -1,3 +1,5 @@
+/*Loginstyles.css*/
+/*styles file for both stepx_signup.html and stepx_login.html*/
 /* Base Reset */
 * {
   box-sizing: border-box;
