--- a/stepx_styles.css
+++ b/stepx_styles.css
@@ -408,15 +408,17 @@ a.logo:active {
     display: inline-block;
 }
 
-/* FINAL OVERRIDE */
-.product-info h2,
-.product-info p,
-.product-info h2:visited,
-.product-info p:visited,
-.dark-mode .product-info h2,
-.dark-mode .product-info p,
-.dark-mode .product-info h2:visited,
-.dark-mode .product-info p:visited {
-    color: black !important;
-    text-decoration: none !important;
+
+/* Force white text for product name and price in dark mode */
+.dark-mode #product-title,
+.dark-mode #product-price {
+  color: white !important;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
 }
