--- a/Loginstyles.css
+++ b/Loginstyles.css
@@ -179,12 +179,18 @@ input {
 
 
 .error-message {
-  background-color: #ffe0e0;
-  color: #b30000;
-  border: 1px solid #b30000;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
   padding: 0.75rem;
   border-radius: 6px;
   margin-bottom: 1rem;
   text-align: center;
   font-weight: bold;
+}
+
+.dark-mode .error-message {
+  background-color: #ff0000;
+  color: #fcfcfc;
+  border-color: #a33;
 }
